src/test/ui/transmutability/issue-101739-2.stderr
error[E0107]: this trait takes at most 3 generic arguments but 6 generic arguments were supplied
  --> $DIR/issue-101739-2.rs:18:14
   |
LL |           Dst: BikeshedIntrinsicFrom<
   |                ^^^^^^^^^^^^^^^^^^^^^ expected at most 3 generic arguments
...
LL | /             ASSUME_LIFETIMES,
LL | |             ASSUME_VALIDITY,
LL | |             ASSUME_VISIBILITY,
   | |_____________________________- help: remove these generic arguments
   |
note: trait defined here, with at most 3 generic parameters: `Src`, `Context`, `ASSUME`
  --> $SRC_DIR/core/src/mem/transmutability.rs:LL:COL
   |
LL | pub unsafe trait BikeshedIntrinsicFrom<Src, Context, const ASSUME: Assume = { Assume::NOTHING }>
   |                  ^^^^^^^^^^^^^^^^^^^^^ ---  -------  ------------------------------------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
